--- a/index.html
+++ b/index.html
@@ -59,22 +59,22 @@
   <div class="row">
     <div class="col-sm-3">
       <p>Project-1</p>
-      <a href="./project1/">
+      <a href="./project1/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
        <p>Project-2</p>
-      <a href="./project2/">
+      <a href="./project2/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
       <p>Project-3</p>
-      <a href="./project3/">
+      <a href="./project3/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3">
       <p>Project-4</p>
-      <a href="./project4/">
+      <a href="./project4/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
   </div>
@@ -84,22 +84,22 @@
   <div class="row">
     <div class="col-sm-3">
        <p>Project-5</p>
-      <a href="./project5/">
+      <a href="./project5/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
        <p>Project-6</p>
-      <a href="./project6/">
+      <a href="./project6/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
        <p>Project-7</p>
-      <a href="./project7/">
+      <a href="./project7/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3">
        <p>Project-8</p>
-      <a href="./project8/">
+      <a href="./project8/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
   </div>
@@ -109,22 +109,22 @@
   <div class="row">
     <div class="col-sm-3">
        <p>Project-9</p>
-      <a href="./project9/">
+      <a href="./project9/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
        <p>Project-10</p>
-      <a href="./project10/">
+      <a href="./project10/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
        <p>Project-11</p>
-      <a href="./project11/">
+      <a href="./project11/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3">
        <p>Project-12</p>
-      <a href="./project12/">
+      <a href="./project12/" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
   </div>
