--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
   <div class="row">
     <div class="col-sm-3">
       <p>Project-1</p>
-      <a href="./project1/" target="_blank">
+      <a href="./project1/index4.html" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
        <p>Project-2</p>
-      <a href="./project2/" target="_blank">
+      <a href="./project2/index1.html" target="_blank">
       <img src="https://placehold.it/150x80?text=IMAGE" class="img-responsive" style="width:100%" alt="Image"></a>
     </div>
     <div class="col-sm-3"> 
